# neural_network

./: .gitignore  CMakeLists.txt  README.md
examples/: MyNN.cpp  main.cpp
include/: ActivationLayer.hpp  DenseLayer.hpp  Network.hpp  ReLuLayer.hpp  Tensor.hpp  tensor.hpp
src/: DenseLayer.cpp  Network.cpp  ReLuLayer.cpp  Tensor.cpp  tensor.cpp
tests/: test_MyNN.cpp  test_main.cpp
